--- a/example/config.yaml
+++ b/example/config.yaml
@@ -1,8 +1,8 @@
 # https://developers.home-assistant.io/docs/add-ons/configuration#add-on-config
 name: Example add-on
-version: "1.2.0"
+version: "1.2.1"
 slug: example
-description: Example add-on
+description: Example python add-on
 url: "https://github.com/marcohald/ha-addons/tree/main/example"
 arch:
   - armhf
