--- a/repository.yaml
+++ b/repository.yaml
@@ -1,4 +1,4 @@
 # https://developers.home-assistant.io/docs/add-ons/repository#repository-configuration
-name: Example Home Assistant add-on repository
-url: 'https://github.com/home-assistant/addons-example'
-maintainer: Awesome Maintainer <awesome@example.com>
+name: marcohald Home Assistant add-on repository
+url: "https://github.com/marcohald/ha-addons"
+maintainer: marcohald Maintainer <awesome@example.com>
