--- a/.github/workflows/builder.yaml
+++ b/.github/workflows/builder.yaml
@@ -73,6 +73,11 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4.2.2
 
+      - name: Pull & update submodules recursively
+        run: |
+          git submodule update --init --recursive
+          git submodule update --recursive --remote
+
       - name: Get information
         id: info
         uses: home-assistant/actions/helpers/info@master
