--- a/kleinanzeigen-scanner/Dockerfile
+++ b/kleinanzeigen-scanner/Dockerfile
@@ -5,6 +5,6 @@ FROM $BUILD_FROM
 
 # Copy root filesystem
 COPY rootfs /
-RUN git clone https://github.com/marcohald/Kleinanzeigen-Telegram-Bot.git /opt/kleinanzeigen-scanner/
+#RUN git clone https://github.com/marcohald/Kleinanzeigen-Telegram-Bot.git /opt/kleinanzeigen-scanner/
 RUN find /opt/
 RUN pip install -r /opt/kleinanzeigen-scanner/requirements.txt
