--- a/kleinanzeigen-scanner/Dockerfile
+++ b/kleinanzeigen-scanner/Dockerfile
@@ -2,6 +2,16 @@
 ARG BUILD_FROM
 FROM $BUILD_FROM
 
+# Install build dependencies required for pycurl
+RUN apk update && apk add --no-cache \
+    build-base \
+    libcurl \
+    libcurl-dev \
+    python3-dev \
+    py3-pip \
+    && pip install --no-cache-dir pycurl \
+    && apk del build-base python3-dev
+
 
 # Copy root filesystem
 COPY rootfs /
