--- a/kleinanzeigen-scanner/config.yaml
+++ b/kleinanzeigen-scanner/config.yaml
@@ -1,6 +1,6 @@
 # https://developers.home-assistant.io/docs/add-ons/configuration#add-on-config
 name: Kleinanzeigen Scanner
-version: "0.0.1"
+version: "0.0.2"
 slug: kleinanzeigen-scanner
 description: Kleinanzeigen Scanner
 url: "https://github.com/marcohald/ha-addons/tree/main/kleinanzeigen-scanner"
@@ -14,7 +14,7 @@ init: false
 map:
   - share:rw
 options:
-  TELEGRAM_API_TOKEN: ""
+  token: ""
 schema:
-  TELEGRAM_API_TOKEN: "str"
+  token: "str"
 image: "ghcr.io/marcohald/{arch}-addon-kleinanzeigen-scanner"
