--- a/kleinanzeigen-scanner/config.yaml
+++ b/kleinanzeigen-scanner/config.yaml
@@ -1,6 +1,6 @@
 # https://developers.home-assistant.io/docs/add-ons/configuration#add-on-config
 name: Kleinanzeigen Scanner
-version: "0.0.3"
+version: "0.0.4"
 slug: kleinanzeigen-scanner
 description: Kleinanzeigen Scanner
 url: "https://github.com/marcohald/ha-addons/tree/main/kleinanzeigen-scanner"
@@ -15,6 +15,10 @@ map:
   - share:rw
 options:
   TELEGRAM_API_TOKEN: ""
+  KLEINANZEIGEN_API_USER: ""
+  KLEINANZEIGEN_API_PW: ""
 schema:
   TELEGRAM_API_TOKEN: "str"
+  KLEINANZEIGEN_API_USER: "str"
+  KLEINANZEIGEN_API_PW: "str"
 image: "ghcr.io/marcohald/{arch}-addon-kleinanzeigen-scanner"
